# Web_app

./: pyproject.toml
firstsite/firstsite/: settings.py  urls.py
firstsite/main/: urls.py  views.py
