[tool.poetry]
name = "web-app"
version = "0.1.0"
description = ""
authors = ["Burlakov Anton <burlakovanton99@yandex.ru>"]
readme = "README.md"
packages = [{include = "web_app"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
pytz = "^2023.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
